fix: math equation overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -197,14 +197,6 @@ body {
   -webkit-transform: translate3d(0, calc(78px * -1), 0);
 }
 
-.vitals {
-  background-image: url(/images/graph.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  height: 114px;
-}
-
 @media (min-width: 768px) {
   .navbar-hidden {
     transform: translate3d(0, calc(110px * -1), 0);
