--- a/src/styles/katex.css
+++ b/src/styles/katex.css
@@ -1,1 +1,9 @@
 @import "katex/dist/katex.min.css";
+
+@media only screen and (max-width: 600px) {
+  .katex-display > .katex {
+    max-width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
+}
